# ParallelComputing_part7

./: CMakeLists.txt  README.md
src/: main.cpp
